# raylib-cruby-extension

./: .editorconfig  .gitignore  .gitmodules  .yardopts  CMakeLists.txt  CODE_OF_CONDUCT.md  Gemfile  LICENSE.txt  README.md  Rakefile  rubyraylib.gemspec
.github/workflows/: ci.yml  linux.yml  mac.yml  windows.yml
ext/rubyraylib/: audio.cpp  audio.hpp  audio_stream.cpp  audio_stream.hpp  automation_event.cpp  automation_event.hpp  camera.cpp  camera.hpp  color.c  color.cpp  color.h  color.hpp  draw.c  draw.cpp  draw.h  draw.hpp  ease.cpp  ease.hpp  extconf.rb  files.cpp  files.hpp  font.cpp  font.hpp  gamepad.cpp  gamepad.hpp  gestures.cpp  gestures.hpp  gui.cpp  gui.hpp  image.c  image.cpp  image.h  image.hpp  input.cpp  input.hpp  kernel.c  kernel.cpp  kernel.h  kernel.hpp  keyboard.cpp  (+67 more)
lib/: main.rb  player.rb  raymark.rb  rubyraylib.rb
lib/rubyraylib/: libraylib.so.500  main.rb  player.rb  raymark.rb  settings.rb  version.rb
lib/rubyraylib/core/: input.rb  spritesheet.rb  timer.rb
lib/rubyraylib/core/input/: gamepad.rb  gestures.rb  keyboard.rb  mouse.rb  touch.rb
lib/rubyraylib/rl/: color.rb  draw.rb  ease.rb  gamepad.rb  gestures.rb  gui.rb  image.rb  kernel.rb  keyboard.rb  mouse.rb  rect.rb  text.rb  texture.rb  touch.rb  vec2.rb  vec3.rb  vec4.rb  window.rb
lib/script/: gamepad.rb  input.rb  keyboard.rb  mouse.rb  touch.rb
